// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> that renders a link should add string html attributes correctly 1`] = `
<div>
  <a
    class="Link"
    href="https://textkernel.com"
    target="_blank"
  >
    Click me
  </a>
</div>
`;

exports[`<Link> that renders a link should render default link correctly 1`] = `
<div>
  <a
    class="Link"
    href="https://textkernel.com"
  >
    Click me
  </a>
</div>
`;

exports[`<Link> that renders a link should render nothing if no children are provided 1`] = `<div />`;
